# parish_scraper

./: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/: ancestry.py  family_search.py
src/parish_scraper/: __init__.py  ancestry.py  family_search.py  skeleton.py
src/parish_scraper/ancestry/: __init__.py  ancestry.py
src/parish_scraper/family_search/: __init__.py  family_search.py
src/tests/: conftest.py  test_ancestry.py
tests/: conftest.py  test_skeleton.py
